# vatsim-recorder

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
docs/specs/: 2026-04-21-vatsim-recorder-design.md
docs/superpowers/plans/: 2026-04-21-vatsim-recorder-plan.md
src/: cli.rs  config.rs  db.rs  fetcher.rs  flight_plan_hash.rs  lib.rs  main.rs  raw_store.rs  scheduler.rs  stats.rs  vatsim.rs  writer.rs
tests/: end_to_end.rs  real_smoke.rs
tests/fixtures/: vatsim-data.json
