[package]
name = "vatsim-recorder"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "vatsim-recorder"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "time", "signal"] }
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
flate2 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sha1 = "0.10"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"

[profile.release]
lto = "thin"
